--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-* {
-  font-family: 'Georgia', 'Times', serif;
+h1 {
+  font-size: 42px
 }
 
 a {
@@ -7,6 +7,3 @@ a {
   text-decoration: none;
 }
 
-img {
-  border-radius: 100%;
-}
